# smart_firing

camera_callibration_ws/workspace/camera_calibration_monocular_multi_board/: CMakeLists.txt
camera_callibration_ws/workspace/camera_calibration_monocular_multi_board/sources/: camera_calibration_monocular_multi_board.cpp
darknet_ws/devel/: .catkin  .rosinstall
darknet_ws/devel/include/roborts_msgs/: ArmorDetectionAction.h  ArmorDetectionActionFeedback.h  ArmorDetectionActionGoal.h  ArmorDetectionActionResult.h  ArmorDetectionFeedback.h  ArmorDetectionGoal.h  ArmorDetectionResult.h  BonusStatus.h  FricWhlRequest.h  FricWhlResponse.h  GameResult.h  GameStatus.h  GameSurvivor.h  GimbalAngle.h  GimbalMode.h  GimbalModeRequest.h  GimbalModeResponse.h  GimbalRate.h  GlobalPlannerAction.h  GlobalPlannerActionFeedback.h  GlobalPlannerActionGoal.h  GlobalPlannerActionResult.h  GlobalPlannerFeedback.h  GlobalPlannerGoal.h  GlobalPlannerResult.h  LocalPlannerAction.h  LocalPlannerActionFeedback.h  LocalPlannerActionGoal.h  LocalPlannerActionResult.h  LocalPlannerFeedback.h  LocalPlannerGoal.h  LocalPlannerResult.h  ObstacleMsg.h  ProjectileSupply.h  RobotBonus.h  RobotDamage.h  RobotHeat.h  RobotShoot.h  RobotStatus.h  ShootCmd.h  (+6 more)
darknet_ws/devel/lib/darknet_ros/: darknet_test
darknet_ws/devel/lib/pkgconfig/: darknet_ros.pc  roborts_base.pc  roborts_bringup.pc  roborts_camera.pc  roborts_common.pc  roborts_costmap.pc  roborts_decision.pc  (+5 more)
darknet_ws/src/darknet_ros/: CMakeLists.txt  package.xml
era_ws/devel/: .catkin  .rosinstall
era_ws/src/camera_pkg/: CMakeLists.txt
(+305 files in other folders)
